--- a/src/assets/scss/app-nav.scss
+++ b/src/assets/scss/app-nav.scss
@@ -1,4 +1,9 @@
 nav#navbar{
+	position: fixed;
+	z-index: 10;
+	top: 0;
+	left: 0;
+	width: 100%;
 	height: 60px;
 	background: $green;
 	padding: 0 10px;
