--- a/src/assets/scss/bike-brief.scss
+++ b/src/assets/scss/bike-brief.scss
@@ -1,5 +1,71 @@
 article.bike_brief{
-	border: 1px solid #000;
-	padding: 10px;
-	margin: 10px;
+	border: 1px solid $deepblue;
+	background: $white;
+	height: 100%;
+	display: flex;
+	flex-direction: column;
+	cursor: pointer;
+	transition: .3s;
+	&:hover:not(.disabled){
+		box-shadow: 0 5px 10px rgba($darkgrey, .5);
+		transform: translateY(-3px);
+	}
+	&.disabled{
+		position: relative;
+		cursor: not-allowed;
+		&:before{
+			position: absolute;
+			content: '暫停使用 Disabled';
+			width: 100%;
+			height: 100%;
+			color: $white;
+			@include flex;
+			font-size: 2rem;
+			font-weight: bold;
+			background: rgba(black, .7);
+		}
+	}
+	.text_group{
+		padding: 10px;
+		h2{
+			font-size: 1.2rem;
+			& + small{
+				font-size: 1rem;
+			}
+		}
+		&.area_tag{
+			p{
+				background: $blue;
+				color: $white;
+				display: inline-block;
+				padding: 5px 10px;
+				font-size: 0.7rem;
+				border-radius: 5px;
+			}
+		}
+	}
+	.brief_footer{
+		padding: 10px;
+		margin-top: auto;
+		border-top: 1px solid #000;
+		display: flex;
+		.available_count, .empty_count{
+			width: 50%;
+			text-align: center;
+			label{
+				display: block;
+				font-size: 0.6rem;
+			}
+			span{
+				font-size: 3rem;
+				font-weight: bold;
+			}
+		}
+		.available_count{
+			color: $darkgreen;
+		}
+		.empty_count{
+			color: $orange;
+		}
+	}
 }
