--- a/src/assets/scss/filter-pannel.scss
+++ b/src/assets/scss/filter-pannel.scss
@@ -2,7 +2,8 @@ aside.filter_pannel{
 	width: 300px;
 	height: fit-content;
 	position: sticky;
-	top: 0;
+	top: 70px;
 	left: 0;
+	margin-right: 10px;
 	border: 1px solid #f24;
 }
