--- a/src/assets/scss/default.scss
+++ b/src/assets/scss/default.scss
@@ -1,6 +1,7 @@
 body{
 	font-size: 14px;
 	background: $grey;
+	font-family: 'Roboto Condensed', sans-serif;
 	h1, h2, h3, h4, h5, h6{
 		font-weight: bold;
 	}
