--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -2,6 +2,35 @@ main.index{
 	margin-top: 60px;
 	padding-top: .75rem;
 	.container{
+		#mobile_menu_btn{
+			display: none;
+			@media (max-width: $md) {
+				display: block;
+				position: fixed;
+				bottom: 20px;
+				left: 20px;
+				z-index: 7;
+				width: 35px;
+				height: 35px;
+				text-align: center;
+				background: $dust;
+				border-radius: 50%;
+				transition: .3s;
+				box-shadow: 0 3px 10px rgba(black, .5);
+				cursor: pointer;
+				i{
+					font-size: 1.5rem;
+					color: $white;
+					line-height: 35px;
+					&.fa-filter{
+						line-height: 40px;
+					}
+				}
+				&.isOpen{
+					left: 245px;
+				}
+			}
+		}
 		@include flex(flex-start);
 		@media (max-width: $md) {
 		}
