--- a/src/assets/scss/index.scss
+++ b/src/assets/scss/index.scss
@@ -39,6 +39,13 @@ main.index{
 			display: flex;
 			flex: 1;
 			flex-wrap: wrap;
+			.empty_text{
+				width: 100%;
+				margin-top: .75rem;
+				text-align: center;
+				height: 200px;
+				line-height: 200px;
+			}
 			.columns{
 				margin: 0;
 				width: 100%;
