--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -6,6 +6,7 @@
 
 @import './app-nav';
 @import './index';
+@import './geo-map';
 @import './bike-brief';
 @import './filter-pannel';
 @import './pagination';
